<resources>
    <string name="register_label">Đăng ký tài khoản</string>
    <string name="login_label">Chào mừng trở lại!</string>
    <string name="simple_alert">Vui lòng điền đầy đủ thông tin các trường dữ  liệu bắt buộc (*)</string>
    <string name="app_name">IMemo</string>
    <string name="email">Nhập địa chị e-mail</string>
    <string name="password">Nhập mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="login_with_google">Đăng nhập với Google</string>
    <string name="input_email_error">Email không hợp lệ</string>
    <string name="input_email_empty_error">Bạn cần điều đầy đủ email</string>
    <string name="input_password_empty_error">Bạn cần điền đầy đủ mật khẩu</string>
    <string name="input_username_empty_error">Bạn cần điền đầy đủ tên đăng nhập</string>
    <string name="input_username">Nhập tên đăng nhập</string>
    <string name="privacy_policy">Tôi đồng ý với các điều khoản &amp; điều kiện</string>
    <string name="have_account">Bạn đã có tài khoản?</string>
    <string name="register">Đăng ký</string>
    <string name="register_password_error">Mật khẩu phải trên 8 ký tự</string>
    <string name="login_failure_with_google">Đăng nhập không thành công</string>
    <string name="login_failure">Đăng nhập không thành công. Vui lòng kiểm tra email và mật khẩu</string>
    <string name="no_internet_failure">Vui lòng kiểm tra lại kết nối internet</string>
    <string name="register_failure">Đăng ký không thành công. Xin vui lòng thử lại</string>
    <string name="register_already_have">Tài khoản này đã đăng ký</string>
    <string name="register_success">Đăng ký thành công</string>
    <string name="image_and_video">Ảnh / Video</string>
    <string name="link">Link</string>
    <string name="audio">Audio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="pin">Ghim memo</string>
    <string name="unpin">Gỡ ghim memo</string>
    <string name="delete">Xóa</string>
    <string name="share">Chia sẻ</string>
    <string name="add_memo_label">Thêm memo</string>
    <string name="all_my_memo_textView">Memo của tôi</string>
    <string name="all_memo_shared_with_me_textView">Memo chia sẻ với tôi</string>
</resources>